# Cloud-Detect-Assignment

./: Dockerfile  README.md  app.py  environment.yaml  my_deployment.yaml  my_service.yaml  pyproject.toml  requirements-dev.txt  requirements.txt
cloud_detect/: __init__.py  _version.py  api.py  io.py  object_detection.py
cloud_detect.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
notebooks/: 00_yolo_opencv_01.ipynb  01_yolo_opencv_02.ipynb  02_requests_01.ipynb
tests/locust/: locustfile.py
